# StreamingNormalOrientation

./: .gitmodules  CMakeLists.txt  README.md  StreamingNormalOrientation.sln
StreamingNormalOrientation/: BlockTimer.cpp  BlockTimer.h  MortonUtils.cu  MortonUtils.cuh  OpenPointCloudStreamBinary.h  OrientationProblem.cpp  OrientationProblem.h  PointCloudStreamAscii.h  PointCloudStreamBinary.h  SignedUnionFind.h  StreamingNormalOrientation.vcxproj  StreamingNormalOrientation.vcxproj.filters  StreamingNormalOrientationMinimal.vcxproj  StreamingNormalOrientationMinimal.vcxproj.filters  basicProcessing.h  common.cpp  common.h  exceptions.h  main.cpp  normalEstimation.cu  normalEstimation.cuh  normalEstimation.h  normalOrientation.h  normalOrientationHooks.cpp  normalOrientationHooks.h  pointCloudWriter.h  utils.cpp  utils.h
StreamingNormalOrientation/SVD/: Givens_QR_Factorization_Kernel.cuh  Jacobi_Conjugation_Kernel.cuh  Kernel_Declarations.cuh  Main_Kernel_Body.cuh  SVD.cu  SVD.cuh
StreamingNormalOrientation/nih/: priority_queue.h  priority_queue_inline.h  types.h
UnitTests/: TestUnionFind.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters
cmake/: FindMaxFlow.cmake  FindOpenGM.cmake  FindVigra.cmake
dependencies/QPBO-opengm/: CMakeLists.txt  QPBO.cpp  QPBO.h  QPBO.vcxproj  QPBO.vcxproj.filters  QPBO_extra.cpp  QPBO_maxflow.cpp  QPBO_postprocessing.cpp  instances.inc
